@@ -3,25 +3,34 @@ package com.melek.vehicule.gestion_stock_vehicules.dto;
 import com.melek.vehicule.gestion_stock_vehicules.model.Avarie;
 import com.melek.vehicule.gestion_stock_vehicules.model.Photo;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class AvarieDTO {
     private Long id;
     private String type;
     private String commentaire;
     private List<String> photoUrls;
+    private List<Long> photoIds;
 
 
     public AvarieDTO(Avarie avarie) {
         this.id = avarie.getId();
         this.type = avarie.getType();
         this.commentaire = avarie.getCommentaire();
-        this.photoUrls = avarie.getPhotos().stream()
-                .map(photo -> "/api/photos-by-name/" + photo.getFileName())
-                .toList();
+        this.photoIds = avarie.getPhotos() != null
+                ? avarie.getPhotos().stream().map(p -> p.getId()).collect(Collectors.toList())
+                : List.of();
     }
 
-    // Getters et Setters
+    public List<Long> getPhotoIds() {
+        return photoIds;
+    }
+
+    public void setPhotoIds(List<Long> photoIds) {
+        this.photoIds = photoIds;
+    }
 
     public List<String> getPhotoUrls() {
         return photoUrls;
